[package]
name = "rr_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["rust_rhythm_windows"]

[lib]
name = "rr_core"
crate-type = ["lib", "cdylib"]

[dependencies]

# graphics
winit = "0.30.5"
wgpu = "22.1.0"
wgpu_text = "0.8.8"
egui = "0.29.1"
egui-wgpu = "0.29.1"
egui-winit = "0.29.1"
profiling = "*"
image = "0.25.1"

# async / network

tokio = { version = "1.27.0", features = ["full"] }
futures = { version = "0.3.24", features = ["executor", "thread-pool"] }

# audio
rodio = "0.18.1"
cpal = "0.15.3"

# functions
toml_edit = "0.22.13"
specs = "0.20.0"

# log
log = "0.4.22"


#util
once_cell = "1.19"
anyhow = "1.0"
bytemuck = "1.16"
rayon = "1.10.0"
rand = "0.8"
num = "0.4"
nalgebra = { version = "0.32", features = ["bytemuck"] }
dashmap = "5.5"
crossbeam = "0.8"
serde = { version = "1.0.210", features = ["derive"] }
ron = "0.8.1"

[features]
android = ["winit/android-native-activity"]

[profile.release]
codegen-units = 1


[target.'cfg(target_os = "android")'.dependencies]
ndk = { version = "0.9.0", features = [] }
android-activity = { version = "0.6" }
android_logger = "0.13.3"


[package.metadata.android]
build_targets = ["aarch64-linux-android"]


[package.metadata.android.signing.release]
path = "./sign/debug.keystore"
keystore_password = "android"