[package]
name = "rr_core"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["rust_rhythm_windows"]

[lib]
name = "rr_core"
crate-type = ["lib", "cdylib"]

[dependencies]

# graphics
winit = "0.30.9"
wgpu = "24.0.1"
egui = "0.31.0"
egui_extras = { version = "0.31.0" }
egui-wgpu = "0.31.0"
egui-winit = "0.31.0"
profiling = "1.0.16"
image = "0.25"

# util for render
rectangle-pack = "0.4.2"
# async / network

tokio = { version = "1.27.0", features = ["full"] }
futures = { version = "0.3.24", features = ["executor", "thread-pool"] }

# audio
rodio = { git = "https://github.com/RustAudio/rodio.git", branch = "0.21" }
cpal = "0.15.3"
rubato = { version = "0.16.2" }

# functions
toml_edit = "0.22.13"
specs = { version = "0.20.0" , default-features = false, git = "https://github.com/amethyst/specs.git"}

# log
log = "0.4.22"


#util
once_cell = "1.19"
anyhow = "1.0"
bytemuck = "1.16"
rayon = "1.10.0"
num = "0.4"
nalgebra = { version = "0.33.2", features = ["bytemuck"] }
dashmap = "6.1.0"
serde = { version = "1.0.210", features = ["derive"] }
ron = "0.8.1"
rfd = "0.15.1"
crossbeam = "0.8.4"

single_thread_cell = "0.3.0"


[features]
android = ["winit/android-native-activity"]

[profile.release]
codegen-units = 1

[profile.dev.package.rubato]
opt-level = 3
[profile.dev.package.realfft]
opt-level = 3
[profile.dev.package.rustfft]
opt-level = 3
[profile.dev.package.num-complex]
opt-level = 3
[profile.dev.package.num-integer]
opt-level = 3
[profile.dev.package.num-traits]
opt-level = 3
[profile.dev.package.rayon]
opt-level = 3

[target.'cfg(target_os = "android")'.dependencies]
ndk = { version = "0.9.0", features = [] }
android-activity = { version = "0.6" }
android_logger = "0.13.3"


[package.metadata.android]
build_targets = ["aarch64-linux-android"]


[package.metadata.android.signing.release]
path = "./sign/debug.keystore"
keystore_password = "android"


